usage of cryptsetup

--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -12,6 +12,8 @@ general {
         output_format = "i3bar"
 }
 
+order += "keyboard_layout"
+order += "sysdata"
 order += "disk /"
 order += "wireless wlan0"
 order += "ethernet eth0"
