--- a/i3/config
+++ b/i3/config
@@ -14,6 +14,8 @@ set $mod Mod4
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
 font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
+font pango:Source Code Pro for Powerline 10px
+
 # The font above is very space-efficient, that is, it looks good, sharp and
 # clear in small sizes. However, if you need a lot of unicode glyphs or
 # right-to-left text rendering, you should instead use pango for rendering and
@@ -149,6 +151,7 @@ focus_follows_mouse no
 # finds out, if available)
 bar {
         status_command py3status -c ~/.i3/i3status.conf -i ~/.i3/modules/
+        font pango:Source Code Pro for Powerline 11
 }
 
 bindsym $mod+m move workspace to output left
@@ -170,6 +173,7 @@ bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
 
+exec "xrandr --output eDP1 --dpi 255"
 exec "dropbox start"
 exec --no-startup-id nm-applet
 exec kbdd
