change pdi to 200

--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
-font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
+#font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 font pango:Source Code Pro for Powerline 10px
 
 # The font above is very space-efficient, that is, it looks good, sharp and
@@ -173,7 +173,7 @@ bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
 
-exec "xrandr --output eDP1 --dpi 255"
+exec "xrandr --output eDP1 --dpi 200"
 exec "dropbox start"
 exec --no-startup-id nm-applet
 exec kbdd
