--- a/i3/config
+++ b/i3/config
@@ -99,6 +99,7 @@ bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
+bindsym $mod+Tab workspace back_and_forth
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1
@@ -150,7 +151,8 @@ focus_follows_mouse no
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command py3status -c ~/.i3/i3status.conf -i ~/.i3/modules/
+        # status_command py3status -c ~/.i3/i3status.conf -i ~/.i3/modules/
+        status_command i3blocks -c ~/.i3/i3blocks.conf
         font pango:Source Code Pro for Powerline 11
 }
 
