--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -101,6 +101,10 @@ interval=5
 markup=pango
 min_width=bat: ■■■■■
 
+[temperature]
+command=~/.i3/blocks/temperature --chip coretemp-isa-0000
+interval=10
+
 # Date Time
 #
 [time]
