update battery minimal width

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -99,7 +99,7 @@ command=~/.i3/blocks/batterybar #run batterybar -h for options
 label=⚡
 interval=5
 markup=pango
-min_width=bat: ■■■■■
+min_width=⚡: ■■■■■
 
 [temperature]
 command=~/.i3/blocks/temperature --chip coretemp-isa-0000
