add volume for i3blocks

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -40,6 +40,12 @@ instance=Master
 interval=once
 signal=10
 
+[volume-pulseaudio]
+command=~/.i3/blocks/volume-pulseaudio
+interval=once
+signal=1
+moderation
+
 [kbdd_layout]
 command=~/.i3/blocks/kbdd_layout
 interval=persist
