enable/disable touchpad

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -30,7 +30,7 @@ markup=none
 
 [volume-pulseaudio]
 command=~/.i3/blocks/volume-pulseaudio
-interval=persist
+interval=once
 signal=1
 
 [kbdd_layout]
